--- a/templates/base.html
+++ b/templates/base.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <title>{{title}}</title>
 </head>
 <body>
     <header>
         <div class="top-header">
-            
+            <div class="logo">
+                <img src="{{ url_for('static', filename='img/AKlogo.png') }}">
+            </div>
         </div>
         <div class="bottom-header">
         </div>
     </header>
-    <content>
-        {% block content %}{% endblock %}
-    </content>
-    <footer>
-        <div class="top-footer">
-            <div class="entrance-to-RSHW">
-                <p>© 2022, <span><a href="https://business.kalashnikov.market/">ООО «Русское Стрелковое Оружие»</a><span></p>
+    <div class="wraper">
+        <content>
+            {% block content %}{% endblock %}
+        </content>
+        <footer>
+            <div class="top-footer">
+                <div class="entrance-to-RSHW">
+                    <p>© 2022, <span id="link-RSHW"><a href="https://business.kalashnikov.market/">ООО «Русское Стрелковое Оружие»</a><span></p>
+                </div>
             </div>
-        </div>
-        <div class="bottom-footer">
-            <div class="entrance-to-main-links">
-                <a href="#">Пользовательское соглашение</a>
-                <a href="#">Политика конфиденциальности</a>
-                <a href="#">Адреса магазинов</a>
-                <a href="#">Помощь и поддержка</a>
+            <div class="bottom-footer">
+                <div class="entrance-to-main-links">
+                    <a href="#">Пользовательское соглашение</a>
+                    <a href="#">Политика конфиденциальности</a>
+                    <a href="#">Адреса магазинов</a>
+                    <a href="#">Помощь и поддержка</a>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
