add normal header

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
+<div class="weapons-viewer">
+        <h1>{{item}}</h1>
+</div>
 {% endblock %}
