--- a/static/main.css
+++ b/static/main.css
@@ -45,6 +45,16 @@ body{
 	background-color:#F6F6F7;
     height:100%;
 }
+body::-webkit-scrollbar{
+	width:10px;
+}
+  body::-webkit-scrollbar-track {
+	background: #EDEEF0;    
+  }
+  body::-webkit-scrollbar-thumb {
+	background-color: black;   
+	border: 2px solid #EDEEF0;
+  }
 
 .wraper {
 	display: flex;
@@ -63,24 +73,115 @@ footer {
 header{
     background-color:white;
 }
+.settings-container{
+	padding-right:20%;
+	min-width: 68%;
+	min-height: 30px;
+	float:right;
+	background-color:#EDEEF0;
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 1% 100%);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+#settings-el-1{
+	margin-left: 40px;
+	font-family: monospace;
+	color: #ABAFB5;
+}
+#settings-el-2{
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	color: black;
+	margin-right: 40px;
+	text-decoration: underline;
+}
+#settings-el-3{
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	color: black;
+}
 
-.top-header, .bottom-header{
-    padding-right: 20%;
-    padding-left: 20%;
+.level2{
+	height:80px;
+	padding-top: 15px;
+	padding-bottom: 20px;
+	padding-left: 20%;
+	padding-right: 20%;
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
 }
 .logo img{
-    width: 19%;
+    width: 220px;
+	padding-bottom: 25px;
 }
-.logo{
-    padding-top: 35px;
-    padding-bottom: 35px;
+.search{
+	width: 50%;
+}
+.search form{
+	position: relative;
+	display: inline;
+}
+.search input{
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 20px;
+	padding:10px;
+	width: 100%;
+	background-color:#F2F2F2;
+	border: 1px solid #D9D9D9;
+	border-radius: 5px;
+}
+.search button{
+	position:absolute;
+	width:40px;
+	height:40px;
+	top:-15px;
+	right: 5px;
+	background-color:#F2F2F2;
+}
+#lupa{
+	width: 25px;
+	height: 25px;
+}
+.basket img{
+	width: 25px;
+}
+.enter-to-the-club button{
+	color:white;
+	font-size: 14px;
+	font-weight: bold;
+	font-family: monospace;
+	padding: 12px 20px;
+	background: rgb(234,0,44);
+	background: linear-gradient(142deg, rgba(234,0,44,1) 0%, rgba(247,90,31,1) 86%, rgba(243,125,35,1) 100%);
+	border-radius: 2px;
 }
 
 .bottom-header{
     background-color: black;
-    height: 5px;
-}
+   
+	-webkit-box-shadow: 0px 4px 53px 7px rgba(34, 60, 80, 0.18);
+	-moz-box-shadow: 0px 4px 53px 7px rgba(34, 60, 80, 0.18);
+	box-shadow: 0px 4px 53px 7px rgba(34, 60, 80, 0.18);
 
+}
+.all-weapons{
+	height: 47px;
+	margin-right: 20%;
+	margin-left: 20%;
+	display: flex;
+	justify-content:space-between;
+	flex-direction: row;
+	align-items:center;
+}
+.all-weapons a{
+	color:white;
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 16px;
+}
+.all-weapons :last-child{
+	color:#EA002B;
+	text-decoration: underline;
+}
 .top-header{
     background-color: white;
 }
@@ -114,4 +215,28 @@ footer{
 .entrance-to-main-links a:hover, #link-RSHW a:hover{
     transition-duration: 0.3s;
     color: #EA002B;
+}
+
+/* weaponsChanger */
+.list-of-weapons {
+	border-bottom: 3px solid black;
+	border-top: 3px solid black;
+	margin-top: 100px;
+	display:flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+.list-of-weapons a{
+	padding:10px 0px;
+	transition-duration: 0.5s;
+	font-size: 25px;
+	font-family: monospace;
+	font-weight: bold;
+	color:black;
+	text-decoration: none;
+}
+
+.list-of-weapons a:hover{
+	transition-duration: 0.5s;
+	color:#EA002B;
 }
