--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,42 @@
 <body>
     <header>
         <div class="top-header">
-            <div class="logo">
-                <img src="{{ url_for('static', filename='img/AKlogo.png') }}">
+            <div class="settings-container">
+                <a id="settings-el-1" href="#">Калашников Клуб</a>
+                <div class="settings-douter">
+                    <a id="settings-el-2" href="#">Москва и Московская область</a>
+                    <a id="settings-el-3" href="#">Привилегии Калашников Клуба</a> 
+                </div>
+            </div>
+            <div class="level2">
+                <div class="logo">
+                    <img src="{{ url_for('static', filename='img/AKlogo.png') }}">
+                </div>
+                <div class="search">
+                    <form action="" method="get">
+                        <input type="search" name="search" placeholder="Поиск">
+                        <button type="submit"><img id="lupa" src="{{ url_for('static', filename='img/lupa.png')}}" alt="#"></button>
+                    </form>
+                </div>
+                <div class="basket">
+                    <img src="https://kalashnikov.market/img/cart.svg" alt="">
+                </div>  
+                <div class="enter-to-the-club">
+                    <button>ВОЙТИ В КЛУБ</button>
+                </div>
             </div>
         </div>
         <div class="bottom-header">
+            <div class="all-weapons">
+                <a href="#"></a>
+                <a href="#">Пневматические винтовки</a>
+                <a href="#">Нарезное</a>
+                <a href="#">Травматическое</a>
+                <a href="#">Гладкоствольное</a>
+                <a href="#">Пневматические пистолеты</a>
+                <a href="#">Патроны гладкоствольные</a>
+                <a href="#">Акции</a>
+            </div>
         </div>
     </header>
     <div class="wraper">
